--- a/src/app/tickets/comment/comment.component.html
+++ b/src/app/tickets/comment/comment.component.html
@@ -8,7 +8,7 @@
         </span>
     </div>
     <!-- list comment -->
-    <div *ngIf="comments.length > 0">
+    <div class="list-comment" *ngIf="comments.length > 0">
         <div class="my-comment" *ngFor="let item of comments, index as i">
             <div>
                 <div class="img_avt">
