--- a/src/app/tickets/ticket-detail/ticket-detail.component.html
+++ b/src/app/tickets/ticket-detail/ticket-detail.component.html
@@ -17,7 +17,9 @@
           <div>
             <app-rated 
               [ticketId]="ticketId"
-              [creatorId]="ticket.creator"></app-rated>
+              [creatorId]="ticket.creator"
+              [idCustomer]="customerId">
+            </app-rated>
           </div>
           <h3>{{ticket.city}}</h3>
           <div class="list-category-item">
