--- a/src/app/tickets/rated/rated.component.html
+++ b/src/app/tickets/rated/rated.component.html
@@ -11,47 +11,59 @@
     </span>
     <span
         class="label_count_rate">
-        {{ '( ' + (rated.countRated || 0) + ' đánh giá )' }}
+        {{ '( ' + countRated + ' đánh giá )' }}
     </span>
 </div>
-<div class="button_rated">
+<div class="button_rated" (clickOutside)="(isShowFormRate=false)">
     <button 
         mat-stroked-button
         color="accent"
-        (clickOutside)="isShowFormRate = false"
-        (click)="onRate()">
+        (click)="openRated()">
         Đánh giá vé
     </button>
     <div 
         class="form_rate"
         *ngIf="isShowFormRate">
-        <div class="form_rate_header">Đánh vé giá</div>
-        <div (mouseleave)="leaveStar()"
-            style="margin-top: 1rem;">
-            <span 
-                *ngFor="let star of star_image, index as i">
-                <img 
-                    style="padding: 0.25rem; cursor: pointer;"
-                    src='{{ "../../../assets/icon/" + star + ".svg" }}' 
-                    (mouseover)="hoverStar(i)"
-                    width="40px" height="40px">
-            </span>
+        <!-- form đánh giá -->
+        <div *ngIf="!isUsedRated">
+            <div class="form_rate_header">Đánh vé giá</div>
+            <div (mouseleave)="isSelectRated != -1 ? '' : leaveStar()"
+                style="margin-top: 1rem;">
+                <span 
+                    *ngFor="let star of star_image, index as i">
+                    <img 
+                        style="padding: 0.25rem; cursor: pointer;"
+                        src='{{ "../../../assets/icon/" + star + ".svg" }}' 
+                        (mouseover)="hoverStar(i)"
+                        (click)="selectRated(i)"
+                        width="40px" height="40px">
+                </span>
+            </div>
+            <div style="margin-top: 1rem;">
+                <mat-form-field appearance="outline" style="width: 80%;">
+                    <mat-label>Thêm phản hồi</mat-label>
+                    <textarea 
+                        #inputFeedback
+                        matInput></textarea>
+                </mat-form-field>
+            </div>
+            <div>
+                <button 
+                    mat-stroked-button 
+                    color="accent" 
+                    style="margin-right: 0.5rem;"
+                    (click)="isShowFormRate=false;isSelectRated=-1;">Hủy</button>
+                <button 
+                    mat-raised-button 
+                    color="primary"
+                    (click)="sendFeedback( isSelectRated,inputFeedback.value)">Gửi đánh giá</button>
+            </div>
         </div>
-        <div style="margin-top: 1rem;">
-            <mat-form-field appearance="outline" style="width: 80%;">
-                <mat-label>Thêm phản hồi</mat-label>
-                <textarea matInput></textarea>
-            </mat-form-field>
-        </div>
-        <div>
-            <button 
-                mat-stroked-button 
-                color="accent" 
-                style="margin-right: 0.5rem;"
-                (click)="isShowFormRate=false;">Hủy</button>
-            <button 
-                mat-raised-button 
-                color="primary">Gửi đánh giá</button>
-        </div>
+
+        <!-- form đã đánh giá -->
+        <div *ngIf="isUsedRated" style="height: 100%;">
+            <div class="rate_is_user">Bạn đã đánh giá vé!</div>
+            <div style="padding-top: 2rem;"><img class="img_success" src="../../../assets/icon/tick.svg"></div>
+        </div> 
     </div>
 </div>
