--- a/src/app/atom/city/city.component.html
+++ b/src/app/atom/city/city.component.html
@@ -1,6 +1,6 @@
 <mat-card
-    *ngIf="!city"
-    [ngStyle] = "{'background':'center / cover no-repeat  url(' + city.image + ')'}"
+    *ngIf="city"
+    [ngStyle]="{'background':'center / cover no-repeat  url(' + city.image + ')'}"
     style="background-size: cover;"
     class="city"
     (click)="navigateCity(city.name)">
