--- a/src/app/atom/city/city.component.css
+++ b/src/app/atom/city/city.component.css
@@ -2,8 +2,9 @@
     cursor: pointer;
     text-align: center;
     border-radius: 30px;
-    /* width: 200px !important; */
-    height: 200px !important;
+    width: 250px !important;
+    height: 250px !important;
+    margin: 0.25rem;
     /* margin: 1rem; */
     background-color: rgba(0,0,0,0.5);
 }
