refactor structure code

--- a/src/app/menu/header/header.component.html
+++ b/src/app/menu/header/header.component.html
@@ -1,14 +1,8 @@
 <mat-sidenav-container class="example-container">
 <mat-toolbar class="example-toolbar">
 
-  <div routerLink="/home" style="display: flex; align-items: center; padding-left: 9rem;">
-    <img src="../../../assets/icon/brand.svg" style="width: 35px; height: 35px;">
-    <div style="padding-left: 0.5rem;">
-      <h1 class="logo_detail" style="color: rgb(153, 44, 255);">
-        <span style="color: rgb(102, 160, 247);">Trip</span>
-        <span>Cheap</span>
-      </h1>
-    </div>
+  <div routerLink="/home" style="cursor: pointer;">
+    <app-logo-icon></app-logo-icon>
   </div>
   <span class="spacer"></span>
 
