--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,36 +3,45 @@
 
     <h1 class="logo_detail" style="color: rgb(153, 44, 255);">
       <span style="color: rgb(102, 160, 247);">Trip</span>Cheap
+      <!-- <app-logo-icon></app-logo-icon> -->
       <span style="color: rgb(0, 0, 0); font-size: 16px;">/Đăng nhập</span>
     </h1>
 
-    <form (submit)='onLogin(loginForm)' #loginForm = 'ngForm'>
+    <form 
+      (submit)='onLogin(loginForm)' 
+      #loginForm = 'ngForm'>
         <mat-form-field class="form_field">
             <mat-label>Email</mat-label>
             <input
-            matInput
-            type="email"
-            name = "email"
-            ngModel
-            #emailInput = 'ngModel'
-            placeholder="Ex. pat@example.com"
-            required email>
-            <mat-error *ngIf="emailInput.invalid">Vui lòng nhập địa chỉ email hợp lệ.</mat-error>
+              matInput
+              type="email"
+              name = "email"
+              ngModel
+              #emailInput = 'ngModel'
+              placeholder="Ex. pat@example.com"
+              required email>
+            <mat-error 
+              *ngIf="emailInput.invalid">Vui lòng nhập địa chỉ email hợp lệ.</mat-error>
         </mat-form-field>
 
         <mat-form-field class="form_field">
             <mat-label>Mật khẩu</mat-label>
             <input
-            matInput
-            type="password"
-            name = "password"
-            ngModel
-            #passwordInput = 'ngModel'
-            placeholder="Password"
-            required>
-            <mat-error *ngIf="passwordInput.invalid">Vui lòng nhập mật khẩu.</mat-error>
+              matInput
+              type="password"
+              name = "password"
+              ngModel
+              #passwordInput = 'ngModel'
+              placeholder="Password"
+              required>
+            <mat-error 
+              *ngIf="passwordInput.invalid">Vui lòng nhập mật khẩu.</mat-error>
         </mat-form-field>
-        <button type="submit" mat-raised-button color="primary" style="width: 100%;  margin-top: 2rem;">Đăng nhập</button>
+        <button 
+          type="submit" 
+          mat-raised-button 
+          color="primary" 
+          style="width: 100%;  margin-top: 2rem;">Đăng nhập</button>
 
     </form>
     <div style="text-align: center; padding-top: 1rem;">
@@ -40,7 +49,7 @@
       <a
         mat-button
         href="/signup"
-        routerLinkActive="router-link-active" >Đăng ký</a>
+        routerLinkActive="router-link-active">Đăng ký</a>
     </div>
     </mat-card>
 
