--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,11 @@
     *ngFor="let item of categories; index as i" 
     class="list-category-item"
     (click)="detailCategory(item.name)">
-    <span><img src={{srcCategory[i]}} style="width: 30px; height: 30px;"></span>
+    <span>
+      <img 
+        src={{srcCategory[i]}} 
+        style="width: 30px; height: 30px;">
+    </span>
     <span class="list-category-item-name">{{item.name}}</span>
   </div>
 
@@ -13,12 +17,24 @@
 <div class="search-overlay">
   <section class="search-section">
     <mat-card class="search-container">
-        <span><img src="../../../assets/icon/search.svg" style="width: 40px; height: 40px; padding-left: 1rem;"></span>
-        <input #inputSearch id="input-search" class="input-search" placeholder="Tìm kiếm theo địa điểm, hoạt động"
-          (click) = "searchResult()"
-          (keyup.enter) = "onEnter(inputSearch.value)">
+        <span>
+          <img 
+            src="../../../assets/icon/search.svg" 
+            style="width: 40px; height: 40px; padding-left: 1rem;">
+        </span>
+        <input 
+          #inputSearch 
+          id="input-search" 
+          class="input-search" 
+          placeholder="Tìm kiếm theo địa điểm, hoạt động"
+          (click)="searchResult()"
+          (keyup.enter)="onEnter(inputSearch.value)">
     </mat-card>
-    <mat-card *ngIf="isShowSearchResult" #searchResult class="search-result">
+
+    <mat-card 
+      *ngIf="isShowSearchResult" 
+      #searchResult 
+      class="search-result">
       <h5>Điểm đến phổ biến</h5>
       <mat-chip-list
         style="padding-bottom: 1rem;"
@@ -30,7 +46,7 @@
           class="example-box"
           cdkDrag
           *ngFor="let item of city"
-          (click) = "navigateCity(item.name)">
+          (click)="navigateCity(item.name)">
           {{item.name}}
         </mat-chip>
       </mat-chip-list>
@@ -38,21 +54,33 @@
       <div style="display: flex;">
         <div class="list-search-ticket">
           <h5>Hoạt động nổi bật</h5>
-          <div class="ticket-item" *ngFor="let ticket of ticketShowSearch">
-            <img class="image-ticket-item-search"
+          <div 
+            class="ticket-item" 
+            *ngFor="let ticket of ticketShowSearch">
+            <img 
+              class="image-ticket-item-search"
               src={{ticket.imagePath[1]}}>
             <div style="padding-left: 0.5rem;">
-              <a class="link-ticket"
-                (click)="detailTicket(ticket._id)">{{ticket.title}}</a>
+              <a 
+                class="link-ticket"
+                (click)="detailTicket(ticket._id)">
+                {{ticket.title}}
+              </a>
               <p style="line-height: 0.5rem;">{{ticket.city}}</p>
             </div>
           </div>
         </div>
+
         <div style="flex: 50%; padding-left: 8rem;">
           <h5>Bạn đường du lịch</h5>
-          <div class="ticket-item" *ngFor="let cate of categories">
-              <a class="link-ticket"
-                (click)="detailCategory(cate.name)">{{cate.name}}</a>
+          <div 
+            class="ticket-item" 
+            *ngFor="let cate of categories">
+              <a 
+                class="link-ticket"
+                (click)="detailCategory(cate.name)">
+                {{cate.name}}
+              </a>
           </div>
         </div>
       </div>
@@ -60,19 +88,6 @@
   </section>
 </div>
 
-<!-- <div class="list" id="list">
-  <div class="title">Địa Danh Nổi Tiếng</div>
-  <div id="list-city" #listCity class="owl-carousel owl-theme owl-carousel-01">
-    <mat-card
-      *ngFor="let item of city; index as i"
-      [ngStyle] = "{'background':'center / cover no-repeat  url(' + item.image + ')'}"
-      style="background-size: cover;"
-      class="city"
-      (click)="navigateCity(item.name)">
-      <a class="name-city">{{item.name}}</a>
-    </mat-card>
-  </div>
-</div> -->
 
 <div class="section-city">
   <div class="title">Địa Danh Nổi Tiếng</div>
