--- a/src/app/tickets/tickets-category/tickets-category.component.css
+++ b/src/app/tickets/tickets-category/tickets-category.component.css
@@ -6,13 +6,13 @@
     align-items: center;
     justify-content: center;
     background-color: #af9fca38;
-    padding: 3rem;
-    border-radius: 37px;
+    padding: 1rem 0;
+    border-radius: 10px;
   }
 
   .item-ticket > .item {
     width: 270px;
-    margin: 1rem;
+    margin-top: 1rem;
     cursor: pointer;
   }
   .item > img {
@@ -76,7 +76,7 @@
 
 .category {
   flex: 25%;
-  margin: 1rem;
+  margin-top: 1rem;
   height: fit-content;
   position: sticky;
   top: 104px;
