--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -18,7 +18,7 @@
               name = "email"
               ngModel
               #emailInput = 'ngModel'
-              placeholder="Ex. pat@example.com"
+              placeholder="Ex. example@gmail.com"
               required email>
             <mat-error 
               *ngIf="emailInput.invalid">Vui lòng nhập địa chỉ email hợp lệ.</mat-error>
@@ -29,7 +29,7 @@
             <input
               matInput
               type="password"
-              name = "password"
+              name="password"
               ngModel
               #passwordInput = 'ngModel'
               placeholder="Password"
