--- a/src/app/molecule/ticket-slide/ticket-slide.component.html
+++ b/src/app/molecule/ticket-slide/ticket-slide.component.html
@@ -2,7 +2,7 @@
   <div 
     class="scroll left"
     (click)="scrollLeft()">
-    <img 
+    <img scroll
         src="../../../assets/icon/left-arrow.svg" 
         width="20px" height="20px">
   </div>
