--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -105,7 +105,7 @@
 <div class="section-new-ticket">
   <div class="title">Mới được thêm gần đây</div>
   <app-ticket-slide 
-    [tickets]="ticketSpecial"
+    [tickets]="ticketsNew"
     [idList]="'listSpecial'"></app-ticket-slide>
 </div>
 
