--- a/src/app/atom/ticket/ticket.component.css
+++ b/src/app/atom/ticket/ticket.component.css
@@ -5,6 +5,10 @@
     width: 270px;
     height: 310px;
     margin: 1rem;
+    transition: margin-top 0.4s;
+}
+.item:hover{
+    margin-top: -0.6rem;
 }
 .item > img {
     background-size: cover;
