--- a/src/app/menu/header/header.component.css
+++ b/src/app/menu/header/header.component.css
@@ -15,7 +15,7 @@ mat-icon{
 
 .example-toolbar{
   position: fixed;
-  z-index: 9999;
+  z-index: 2;
   /* box-shadow:  5px 5px 5px #f1f1f1; */
   border-bottom: 0.5px solid #f1f1f1;
   background-color: white;
@@ -59,28 +59,18 @@ mat-icon{
   background-color: #f1f1f1;
 }
 
-.img_avt {
-  font-family: 'Quicksand', Tahoma, Geneva, Verdana, sans-serif;
-  /* border: 2px solid pink; */
-  font-weight: bolder;
-  z-index: 1;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  background-color: rgb(102, 160, 247);
-}
-.img_avt > h1 {
-  text-align: center;
-  font-size: 1.5rem;
-  padding: 3px;
-}
-
-
 .logo_detail {
   font-weight: bolder;
   font-size: 30px;
 }
-
-.mat-icon-button {
-
+.cart-show {
+  width: fit-content; 
+  padding: 1rem 1rem;
+  height: max-content; 
+  background-color: #f1f1f1;
+  position: absolute; 
+  top: 50px;
+  right: 121px;
+  z-index: 1;
+  border-radius: 10px;
 }
