--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -20,102 +20,166 @@
             </mat-checkbox>
         </div>
         <div>
-          <td><button mat-stroked-button color="primary" (click) = "deleteServiceExpired()">Xóa các dịch vụ hết hạn</button></td>
-          <td><button mat-stroked-button color="accent" (click) = "deleteServiceIsSelected()">Xóa các dịch vụ đã chọn</button></td>
+          <td>
+            <button 
+              mat-stroked-button 
+              color="primary" 
+              (click)="deleteServiceExpired()">Xóa các dịch vụ hết hạn
+            </button>
+          </td>
+          <td>
+            <button 
+              mat-stroked-button 
+              color="accent" 
+              (click)="deleteServiceIsSelected()">Xóa các dịch vụ đã chọn
+            </button>
+          </td>
         </div>
       </mat-card>
     </thead>
     <tbody>
       <tr *ngFor="let item of itemStill; index as i">
-        <mat-card style="display: flex;
-        align-items: center;width: 100%; position: relative; ">
-          <td>
+        <mat-card style="display: flex; flex: 100%; flex-wrap: wrap;">
+          <div style="display: flex; align-items: center; width: 100%; justify-content: space-between; border-bottom: 2px solid #f1f1f1; width: 100%; padding-bottom: 0.5rem;">
             <mat-checkbox
               (change)="setSome($event.checked, i)"
-              [checked] = 'allComplete[i]'></mat-checkbox>
-          </td>
-          <td><img [src] = "item.imageTicket" width="100px" height="100px"></td>
-          <td class="infoName">
-            <h4 class="nameTicket" [routerLink]="['/detail/', item.idTicket]">{{item.nameTicket}}</h4>
-            <p class="nameService">Loại dịch vụ: {{item.itemService[0].name}}</p>
-            <p style="font-weight: bolder;">{{item.dateStart + ' - ' + item.dateEnd}}</p>
-          </td>
-          <!-- <td class="date">
-            <p>{{item.dateStart + ' - ' + item.dateEnd}}</p>
-            <p>(Giờ địa phương)</p>
-          </td> -->
-          <td class="uni">
-            <section class="uniNumPrice" *ngFor="let itemNum of item.itemService; index as iNum">
-              <div>{{itemNum.itemServiceName}}</div>
-              <div class="btn-add-sub">
-                <button mat-stroked-button color="primary"
-                  (click)="addQuantity(i, iNum)">
-                  <mat-icon>add</mat-icon>
-                </button>
-                  <input [value]="itemNum.quantity" style="height: 27px; width: 27px;">
-                <button mat-stroked-button color="primary"
-                  (click)="subtractQuantity(i, iNum)">
-                  <mat-icon>remove</mat-icon>
-                </button>
+              [checked]='allComplete[i]'></mat-checkbox>
+            <div>
+              <button 
+                mat-stroked-button 
+                color="primary" 
+                [routerLink]="['/detail/update', item.id]">Sửa</button>
+              <button 
+                mat-stroked-button 
+                color="accent" 
+                (click)="deleteOne(item.id)">Xóa</button>
+            </div>
+            
+          </div>
+          <div style="display: flex; width: 100%; justify-content: space-between; padding-top: 0.5rem;">
+            <div style="display: flex;">
+              <div>
+                <img 
+                  style="border-radius: 20px;"
+                  [src]="item.imageTicket" 
+                  width="100px" height="100px">
               </div>
-            </section>
-          </td>
-          <td colspan="7" class="price_last">
-            <!-- <div> -->
-              <div style="font-style: 18px; padding-top: 0.5rem; font-weight: bold; color: red; text-align: center;">
-                <h2>{{priceItemStill[i].toLocaleString('en-us', {minimumFractionDigits: 0}) || 0}} đ</h2>
+              <div style="padding-left: 1rem;">
+                <div 
+                  class="nameTicket" 
+                  [routerLink]="['/detail/', item.idTicket]">
+                  {{item.nameTicket}}
+                </div>
+                <div class="nameService">Loại dịch vụ: {{item.itemService[0].name}}</div>
+                <div style="font-weight: bolder;">
+                  {{ 'Hạn dùng vé: ( ' + item.dateStart + ' - ' + item.dateEnd + ' )'}}
+                </div>
               </div>
-              <div style="display: flex; justify-content: center;">
-                <button mat-stroked-button color="primary" [routerLink]="['/detail/update', item.id]">Sửa</button>
-                <button mat-stroked-button color="accent" (click) = "deleteOne(item.id)">Xóa</button>
+            </div>
+            
+            <div>
+              <div
+                style="display: flex; justify-content: space-between; align-items: center;"
+                *ngFor="let itemNum of item.itemService; index as iNum">
+                <div style="font-size: 14px; padding-right: 1rem;">{{itemNum.itemServiceName}}</div>
+                <div class="btn-add-sub">
+                  <button 
+                    mat-raised-button 
+                    (click)="addQuantity(i, iNum)">
+                    <mat-icon>add</mat-icon>
+                  </button>
+                  <input 
+                    min=0
+                    max=100
+                    step=1
+                    [value]="itemNum.quantity" 
+                    style="height: 25px; width: 27px;">
+                  <button 
+                    mat-raised-button 
+                    (click)="subtractQuantity(i, iNum)">
+                    <mat-icon>remove</mat-icon>
+                  </button>
+                </div>
               </div>
-          </td>
+              <div style="font-style: 18px;font-weight: bold; color: red; text-align: center; float: right;">
+                <div>{{ 'Tổng: ' + priceItemStill[i].toLocaleString('en-us', {minimumFractionDigits: 0}) || 0}} đ</div>
+              </div>
+            </div>
+            
+          </div>
         </mat-card>
       </tr>
 
       <!-- đơn hàng hết hạn -->
+      <tr *ngIf="itemExpired.length  > 0">
+        <div style="font-weight: bold; padding-top: 1rem;">Đơn hàng đã hết hạn</div>
+      </tr>
       <tr *ngFor="let item of itemExpired; index as ie">
-        <mat-card class="item_expired" style="display: flex;
-        align-items: center; width: 100%; ">
-          <td>
+        <mat-card class="item_expired" style="display: flex; flex: 100%; flex-wrap: wrap;">
+          <div style="display: flex; align-items: center; width: 100%; justify-content: space-between; border-bottom: 2px solid #f1f1f1; width: 100%; padding-bottom: 0.5rem;">
             <mat-checkbox disabled = "true"></mat-checkbox>
-          </td>
-          <td><img [src] = "item.imageTicket" width="100px" height="100px"></td>
-          <td class="infoName">
-            <h4 class="nameTicket" [routerLink]="['/detail/', item.idTicket]">{{item.nameTicket}}</h4>
-            <p class="nameService">Loại dịch vụ: {{item.itemService[0].name}}</p>
-            <p style="font-weight: bolder;">{{item.dateStart + ' - ' + item.dateEnd}}</p>
-          </td>
-          <!-- <td class="date">
-            <p>{{item.dateStart + ' - ' + item.dateEnd}}</p>
-            <p>(Giờ địa phương)</p>
-          </td> -->
-          <td class="uni">
-            <section class="uniNumPrice" *ngFor="let itemNum of item.itemService; index as iNum">
-              <div>{{itemNum.itemServiceName}}</div>
-              <div class="btn-add-sub">
-                <button mat-stroked-button color=""
-                  (click)="addQuantity(ie, iNum)">
-                  <mat-icon>add</mat-icon>
-                </button>
-                  <input disabled [value]="itemNum.quantity" style="height: 27px; width: 27px;">
-                <button mat-stroked-button color=""
-                  (click)="subtractQuantity(ie, iNum)">
-                  <mat-icon>remove</mat-icon>
-                </button>
+            <div>
+              <button 
+                mat-stroked-button 
+                color="accent" 
+                (click)="deleteOne(item.id)">Xóa</button>
+            </div>
+          </div>
+
+          <div style="display: flex; width: 100%; justify-content: space-between; padding-top: 0.5rem;">
+            <div style="display: flex;">
+              <div>
+                <img 
+                  style="border-radius: 20px;"
+                  [src]="item.imageTicket" 
+                  width="100px" height="100px">
               </div>
-            </section>
-          </td>
-          <td colspan="7" class="price_last">
-            <!-- <div> -->
-              <div style="font-style: 18px; padding-top: 0.5rem; font-weight: bold; color: #cacaca; text-align: center;">
-                <h2>{{ priceItemExpired[ie].toLocaleString('en-us', {minimumFractionDigits: 0})}} đ</h2>
+              <div style="padding-left: 1rem;">
+                <div 
+                  class="nameTicket" 
+                  [routerLink]="['/detail/', item.idTicket]">
+                  {{item.nameTicket}}
+                </div>
+                <div class="nameService">Loại dịch vụ: {{item.itemService[0].name}}</div>
+                <div style="font-weight: bolder;">
+                  {{ 'Hạn dùng vé: ( ' + item.dateStart + ' - ' + item.dateEnd + ' )'}}
+                </div>
               </div>
-              <div style="display: flex; justify-content: center;">
-                <!-- <button mat-stroked-button color="primary" [routerLink]="['/detail/update', item.id]">Sửa</button> -->
-                <button mat-stroked-button color="accent" (click) = "deleteOne(item.id)">Xóa</button>
+            </div>
+            
+            <div>
+              <div
+                style="display: flex; justify-content: space-between; align-items: center;"
+                *ngFor="let itemNum of item.itemService; index as iNum">
+                <div style="font-size: 14px; padding-right: 1rem;">{{itemNum.itemServiceName}}</div>
+                <div class="btn-add-sub">
+                  <button 
+                    disabled
+                    mat-raised-button 
+                    (click)="addQuantity(i, iNum)">
+                    <mat-icon>add</mat-icon>
+                  </button>
+                  <input 
+                    min=0
+                    max=100
+                    step=1
+                    disabled
+                    [value]="itemNum.quantity" 
+                    style="height: 25px; width: 27px;">
+                  <button 
+                    disabled
+                    mat-raised-button 
+                    (click)="subtractQuantity(i, iNum)">
+                    <mat-icon>remove</mat-icon>
+                  </button>
+                </div>
               </div>
-          </td>
+              <div style="font-style: 18px;font-weight: bold; color: gray; text-align: center; float: right;">
+                <div>{{ 'Tổng: ' + priceItemExpired[ie].toLocaleString('en-us', {minimumFractionDigits: 0}) || 0}} đ</div>
+              </div>
+            </div>
+            
+          </div>
         </mat-card>
       </tr>
     </tbody>
@@ -123,8 +187,11 @@
 
   <mat-card class="total">
     <div>{{countServiceSelect}} x đơn hàng được chọn</div>
-    <div><h3>Tổng cộng</h3></div>
-    <div><h2 style="color: red;">{{priceTotal.toLocaleString('en-us', {minimumFractionDigits: 0})}}đ</h2></div>
+    <div>
+      <h3>Tổng cộng</h3>
+    </div>
+    <div>
+      <h2 style="color: red;">{{priceTotal.toLocaleString('en-us', {minimumFractionDigits: 0})}}đ</h2></div>
     <button mat-raised-button color="warn" (click) = "payCart()">Thanh toán ngay</button>
   </mat-card>
 </section>
